- fixed header alignment/sizing glitch

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -10,6 +10,9 @@
 .c-sidebar-nav-icon img { height: 20px; width: 20px; vertical-align: top;}
 .c-main { padding-top: 0; }
 .c-main > .container-fluid { padding-top: 2rem; }
+
+.empty:after { content: '\200b'; }
+
 .tag {
   /*color: var(--primary);
   background-color: var(--primary);*/
